--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,28 @@ body {
 .ql-editor{
     font-size: 1.05rem;
 }
+
+.post-content p{
+    margin-bottom: .5rem;
+}
+
+.post-content h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+}
+
+.post-content h2{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+}
+
+.post-content a{
+    text-decoration: none;
+    color: #4d8df3;
+}
+
+.post-content a:hover{
+    text-decoration: underline;
+}
